--- a/html/kds.html
+++ b/html/kds.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KDS - ร้านจ่าพงศ์</title>
     <link rel="stylesheet" href="../css/kds.css">
+    <link rel="stylesheet" href="/css/font.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pridi:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
