Update-Admin Dashboard

--- a/html/kds.html
+++ b/html/kds.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KDS - ร้านจ่าพงศ์</title>
+    <title>ร้านข้าวหน้าเป็ดจ่าพงศ์ - KDS</title>
     <link rel="stylesheet" href="../css/kds.css">
     <link rel="stylesheet" href="/css/font.css">
 
@@ -16,7 +16,7 @@
 
     <header class="kds-header">
         <div class="logo-container">
-            <img src="../images/logo.jpg" alt="Jahpong Logo" class="logo">
+          <img src="../images/logo.jpg" alt="Jahpong Logo" class="logo">
         </div>
     </header>
 
