--- a/html/login.html
+++ b/html/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ร้านข้าวหน้าเป็ดจ่าพงศ์ - เข้าสู่ระบบ</title>
+  <title>ร้านข้าวหน้าเป็ดจ่าพงศ์ - Login</title>
   <link rel="stylesheet" href="/css/login.css">
   <link rel="stylesheet" href="/css/font.css">
 
