--- a/html/pos.html
+++ b/html/pos.html
@@ -110,13 +110,18 @@
 
 </div>
 
-  <div class="pos-container" id="success-container" style="display: none;">
+<div id="success-container" class="modal-overlay" style="display: none;">
+  
+  <div class="success-box">
+    
     <div class="success-icon">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-    <path fill="#f06a4e" d="M256 0C114.6 0 0 114.6 0 256s114.6 256 256 256s256-114.6 256-256S397.4 0 256 0zM371.8 200.7L233.8 338.7c-4.7 4.7-10.9 7-17.7 7s-13-2.3-17.7-7l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l46.4 46.4l120.7-120.7c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z"/>
-    </svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+      <path fill="#f06a4e" d="M256 0C114.6 0 0 114.6 0 256s114.6 256 256 256s256-114.6 256-256S397.4 0 256 0zM371.8 200.7L233.8 338.7c-4.7 4.7-10.9 7-17.7 7s-13-2.3-17.7-7l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l46.4 46.4l120.7-120.7c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z"/>
+      </svg>
+    </div>
+    <h2>สั่งอาหารเรียบร้อย</h2>
+
   </div>
-  <h2>สั่งอาหารเรียบร้อย</h2>
 </div>
 
     <!-- Modal สำหรับแสดงรายละเอียดเมนู -->
